# athlon-flex-notifier

./: .docker-env.example  .gitignore  README.md  alembic.ini  pyproject.toml  ruff.toml  stack.env
alembic/: README  env.py  script.py.mako
alembic/versions/: 2024_11_14_2201-a491bf92b0f3_initial_migration.py  2024_11_14_2204-e7672a631bab_add_is_current.py  2024_12_27_1232-c6d237b3de6a_add_index_on_key_hash.py
docs/: README.md  commands.md  datamodel.md  development.md  infrastructure.md  notifications.md  orchestration.md
docs/datamodel/examples/: vehicle.json  vehicle_cluster.json
infrastructure/: Dockerfile  development.yml  docker-compose.yml  portainer.yml  stack.env
sql_scripts/: create_user.sql  vw_vehicle_availability.sql
src/athlon_flex_notifier/: __init__.py  bootstrap.py  di.py  flows.py  helpers.py  main.py  refresher.py  upserter.py  utils.py  vehicle_availability_service.py  worker.py
src/athlon_flex_notifier/models/: __init__.py  base_model.py  option.py  vehicle.py  vehicle_availability.py  vehicle_cluster.py  vehicle_option.py
src/athlon_flex_notifier/models/tables/: __init__.py  base_table.py  notification.py  option.py  vehicle.py  vehicle_cluster.py
src/athlon_flex_notifier/models/views/: base_view.py  vehicle_availability.py
src/athlon_flex_notifier/notifications/: console_notifier.py  email_notifier.py  notifier.py  notifiers.py
src/athlon_flex_notifier/notifications/email/: renderer.py
src/athlon_flex_notifier/notifications/email/templates/: email.html
src/athlon_flex_notifier/services/: filter_service.py
workflows/: build.yml  deploy.yml
