[project]
name = "athlon-flex-updater"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/athlon_flex_updater"]
