[project]
name = "athlon-flex-notifier"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "ruff>=0.6.9",
    "athlon-flex-api>=0.1.5",
    "python-dotenv>=1.0.1",
    "kink>=0.8.0",
    "sqlmodel>=0.0.22",
    "psycopg2>=2.9.9",
    "pytz>=2024.2",
    "jinja2>=3.1.4",
    "prefect>=3.0.11",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
excluded-dependencies = ["pywin32"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/athlon_flex_notifier"]
